== Release Notes

=== Version 2.0.0

* Adds an _eProcurement Glossary_
* Extends the methodological approach adopted in v1.0
* Focuses on eNotification and eAccess
* Main Deliverables: 
** Elicitates new Information Requirements based on the Business Domain knowledge (and taking into account the Use Cases defined in v1.0)
** New _Data Entry Dictionary_
** Evolves the _Conceptual Data Model_ (UML Enterprise Architect Project)
** Evolution of the OWL syntax (Turtle)
** PoC focused on Use Case 1: "Data Journalism"
** Enhances the on-line documentation

=== Version 1.0

* Defines of three Use Cases:
** Use Case 1: "Data Journalism"
** Use Case 2: "Automated matchmaking of procured services and products with businesses"
** Use case 3: "Verifying VAT payments on intra-community service provision"
* Identifies Information Requirements in alignment with the Use Cases
* Defines a _Conceptual Data Model_ 
* Maps the Conceptual Data Model entities to OWL
* Implements the Conceptual Data Model in OWL 

